<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/back"
            android:padding="10dp"
            android:src="@drawable/ic_back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/iv_back"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="This is the title of the video" />

        <ImageView
            android:id="@+id/iv_more"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/more"
            android:src="@drawable/ic_more"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/iv_pip"
        android:contentDescription="@string/picture_in_picture"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:src="@drawable/ic_pip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tool_bar"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/progress_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/controls_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.exoplayer2.ui.DefaultTimeBar
            android:id="@+id/exo_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:played_color="@android:color/holo_purple"
            app:scrubber_drawable="@drawable/ic_scrubber"
            app:unplayed_color="@android:color/darker_gray" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/exo_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/exo_progress"
            tools:text="55:55" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/exo_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:textColor="@color/white"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/exo_progress"
            tools:text="55:55" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/controls_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="100dp">

        <ImageView
            android:id="@+id/iv_unlock"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/unlock"
            android:src="@drawable/ic_unlock"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_rewind"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/rewind"
            android:src="@drawable/ic_rewind"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/iv_unlock"
            app:layout_constraintRight_toLeftOf="@id/iv_previous"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_previous"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/previous"
            android:src="@drawable/ic_previous"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/iv_play"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_play"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/play"
            android:src="@drawable/ic_pause"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/iv_next"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/next"
            android:src="@drawable/ic_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/iv_play"
            app:layout_constraintRight_toLeftOf="@id/iv_next"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/iv_seek_forward"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/fast_forward"
            android:src="@drawable/ic_forward"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/iv_next"
            app:layout_constraintRight_toLeftOf="@id/iv_scaling"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_scaling"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/scaling"
            android:src="@drawable/ic_scaling"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/iv_seek_forward"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>